feat: publish Alpine 256 MiB experiment snapshot